Added PgAdmin 4 capabilities.

--- a/docker/db/db.env
+++ b/docker/db/db.env
@@ -2,3 +2,7 @@
 POSTGRES_USER=unicorn_user
 POSTGRES_PASSWORD=magical_password
 POSTGRES_DB=magical_database
+
+# pgadmin 
+POSTGRES_USER=unicorn_user
+POSTGRES_PASSWORD=magical_password
