--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,13 +13,28 @@ services:
     expose:
       # Opens port 3306 on the container
       - '5432'
+    networks:
+    - backend_network
     env_file:
       - ./db/db.env # configure postgres
     
     volumes:
       - postgis-database-data:/var/lib/postgresql/data/ # persist data even if container shuts down
 
-      #- db:/var/lib/postgresql/data
-      #- ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
+  pgadmin4:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: karl.sangabriel@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: a1128f69-e6f7-4e93-a2df-3d4db6030abc
+    ports:
+    - "8889:80"
+    networks:
+    - backend_network
+    env_file:
+      - ./db/db.env # configure postgres
+networks:
+  backend_network:
+    driver: bridge
+
 volumes:
   postgis-database-data: # named volumes can be managed easier using docker-compose
